# Sessile.drop.analysis

./: .README.md.kate-swp  .gitignore  FrameSupply.py  GUI_sessile_drop_analysis.py  MANIFEST.in  Mainwindow.ui  QT_sessile_drop_analysis.py  README.md  README.md.backup  Settings.ui  common_resolutions.csv  config.toml  contact_angle_analysis_function.py  edge_analysis.py  edge_detection.py  environment.yml  help.py  pyinst_entrypoint.py  pynsist_installer.cfg  pyproject.toml  sessile_drop_analysis.py  settings.py  setup.cfg  setup.py  tox.ini
Old scripts/: GUI_sessile_drop_analysis.py  edge_detection.py
Sample/: Sample.avi
docs/: conf.py  contact.md  index.rst  install.md  usage.md  usage.md.backup
drop_analysis/: .gui.py.kate-swp  About.py  About.ui  FrameSupply.py  Help.py  Help.ui  Mainwindow.py  Mainwindow.ui  Settings.ui  __init__.py  __main__.py  config.toml  edge_analysis.py  edge_detection.py  gui.py  otsu.py  settings.py  settingsui.py
drop_analysis/data/: icon.xcf
hooks/: hook-drop_analysis.py
